--- a/conda_env.yml
+++ b/conda_env.yml
@@ -11,7 +11,8 @@ dependencies:
   - biopython~=1.79
   - tqdm~=4.62.0
   - pytorch~=1.9.0
-  - cudatoolkit=11.1 
+  - cudatoolkit=11.1
+  - mafft=7.487
   - pip
   - pytest
   - pytest-datadir
