add 'top_hits' subset strategy to likelihood_esm_msa.py

--- a/conda_env.yml
+++ b/conda_env.yml
@@ -13,6 +13,7 @@ dependencies:
   - pytorch~=1.9.0
   - cudatoolkit=11.1
   - mafft=7.487
+  - hmmer~=3.3.2
   - pip
   - pytest
   - pytest-datadir
