--- a/conda_env.yml
+++ b/conda_env.yml
@@ -7,6 +7,7 @@ channels:
   - conda-forge
 dependencies:
   - python>=3.8
+  - pandas~=1.3.5
   - muscle~=3.8.0
   - biopython~=1.79
   - tqdm~=4.62.0
