--- a/conda_env.yml
+++ b/conda_env.yml
@@ -19,6 +19,6 @@ dependencies:
   - pytest
   - pytest-datadir
   - pip:
-    - fair-esm~=0.4.2
+    - git+https://github.com/facebookresearch/esm.git@e5e7b06b9a093706607c229ab1c5c9821806814d
     - -e .
 
